[gd_scene load_steps=48 format=2]

[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Player/StageScene3D/Scenes/SexPortalMasturbation.gd" type="Script" id=4]
[ext_resource path="res://Player/Player3D/Parts/MyBoneAttachment.gd" type="Script" id=5]
[ext_resource path="res://Inventory/UnriggedModels/Fleshlight/FleshlightAlt2.tscn" type="PackedScene" id=6]

[sub_resource type="AnimationNodeAnimation" id=446]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=447]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=518]
animation = "PortalSexMasturbationFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=519]
animation = "PortalSexMasturbationInside_1-loop"

[sub_resource type="AnimationNodeAnimation" id=520]
animation = "PortalSexMasturbationTease_1-loop"

[sub_resource type="AnimationNodeAnimation" id=521]
animation = "PortalSexMasturbation_1-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=522]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=523]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=524]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=525]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=526]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=527]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=528]
states/PortalSexMasturbationFast_1-loop/node = SubResource( 518 )
states/PortalSexMasturbationFast_1-loop/position = Vector2( 463, 321 )
states/PortalSexMasturbationInside_1-loop/node = SubResource( 519 )
states/PortalSexMasturbationInside_1-loop/position = Vector2( 463, 158 )
states/PortalSexMasturbationTease_1-loop/node = SubResource( 520 )
states/PortalSexMasturbationTease_1-loop/position = Vector2( 463, 66 )
states/PortalSexMasturbation_1-loop/node = SubResource( 521 )
states/PortalSexMasturbation_1-loop/position = Vector2( 463, 239 )
transitions = [ "PortalSexMasturbationTease_1-loop", "PortalSexMasturbationInside_1-loop", SubResource( 522 ), "PortalSexMasturbationInside_1-loop", "PortalSexMasturbationTease_1-loop", SubResource( 523 ), "PortalSexMasturbationInside_1-loop", "PortalSexMasturbation_1-loop", SubResource( 524 ), "PortalSexMasturbation_1-loop", "PortalSexMasturbationInside_1-loop", SubResource( 525 ), "PortalSexMasturbation_1-loop", "PortalSexMasturbationFast_1-loop", SubResource( 526 ), "PortalSexMasturbationFast_1-loop", "PortalSexMasturbation_1-loop", SubResource( 527 ) ]
start_node = "PortalSexMasturbationTease_1-loop"

[sub_resource type="AnimationNodeBlendTree" id=529]
graph_offset = Vector2( -312.299, 58.849 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 528 )
nodes/StateMachine/position = Vector2( 180, 140 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=451]

[sub_resource type="AnimationNodeAnimation" id=543]
animation = "PortalSexInside_2-loop"

[sub_resource type="AnimationNodeAnimation" id=544]
animation = "PortalSexSquirmFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=545]
animation = "PortalSexSquirm_2-loop"

[sub_resource type="AnimationNodeAnimation" id=546]
animation = "PortalSexTease_2-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=547]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=548]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=549]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=550]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=551]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=552]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=553]
states/PortalSexInside_2-loop/node = SubResource( 543 )
states/PortalSexInside_2-loop/position = Vector2( 472, 161 )
states/PortalSexSquirmFast_2-loop/node = SubResource( 544 )
states/PortalSexSquirmFast_2-loop/position = Vector2( 472, 336 )
states/PortalSexSquirm_2-loop/node = SubResource( 545 )
states/PortalSexSquirm_2-loop/position = Vector2( 472, 247 )
states/PortalSexTease_2-loop/node = SubResource( 546 )
states/PortalSexTease_2-loop/position = Vector2( 472, 79 )
transitions = [ "PortalSexTease_2-loop", "PortalSexInside_2-loop", SubResource( 547 ), "PortalSexInside_2-loop", "PortalSexTease_2-loop", SubResource( 548 ), "PortalSexInside_2-loop", "PortalSexSquirm_2-loop", SubResource( 549 ), "PortalSexSquirm_2-loop", "PortalSexInside_2-loop", SubResource( 550 ), "PortalSexSquirm_2-loop", "PortalSexSquirmFast_2-loop", SubResource( 551 ), "PortalSexSquirmFast_2-loop", "PortalSexSquirm_2-loop", SubResource( 552 ) ]
start_node = "PortalSexTease_2-loop"
graph_offset = Vector2( -6, 33 )

[sub_resource type="AnimationNodeBlendTree" id=530]
graph_offset = Vector2( -322.532, 74.6842 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 553 )
nodes/StateMachine/position = Vector2( 120, 140 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=455]

[sub_resource type="AnimationNodeAnimation" id=532]
animation = "PortalSexMasturbationFast_3-loop"

[sub_resource type="AnimationNodeAnimation" id=533]
animation = "PortalSexMasturbationInside_3-loop"

[sub_resource type="AnimationNodeAnimation" id=534]
animation = "PortalSexMasturbationTease_3-loop"

[sub_resource type="AnimationNodeAnimation" id=535]
animation = "PortalSexMasturbation_3-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=536]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=537]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=538]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=539]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=540]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=541]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=542]
states/PortalSexMasturbationFast_3-loop/node = SubResource( 532 )
states/PortalSexMasturbationFast_3-loop/position = Vector2( 536, 332 )
states/PortalSexMasturbationInside_3-loop/node = SubResource( 533 )
states/PortalSexMasturbationInside_3-loop/position = Vector2( 536, 161 )
states/PortalSexMasturbationTease_3-loop/node = SubResource( 534 )
states/PortalSexMasturbationTease_3-loop/position = Vector2( 536, 82 )
states/PortalSexMasturbation_3-loop/node = SubResource( 535 )
states/PortalSexMasturbation_3-loop/position = Vector2( 536, 245 )
transitions = [ "PortalSexMasturbationTease_3-loop", "PortalSexMasturbationInside_3-loop", SubResource( 536 ), "PortalSexMasturbationInside_3-loop", "PortalSexMasturbationTease_3-loop", SubResource( 537 ), "PortalSexMasturbationInside_3-loop", "PortalSexMasturbation_3-loop", SubResource( 538 ), "PortalSexMasturbation_3-loop", "PortalSexMasturbationInside_3-loop", SubResource( 539 ), "PortalSexMasturbation_3-loop", "PortalSexMasturbationFast_3-loop", SubResource( 540 ), "PortalSexMasturbationFast_3-loop", "PortalSexMasturbation_3-loop", SubResource( 541 ) ]
start_node = "PortalSexMasturbationTease_3-loop"
graph_offset = Vector2( -11, 18 )

[sub_resource type="AnimationNodeBlendTree" id=531]
graph_offset = Vector2( -246.532, 87.6842 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 542 )
nodes/StateMachine/position = Vector2( 160, 120 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=482]

[node name="SexPortalMasturbation" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.318976, -1.77462 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Sprite3D3" type="Sprite3D" parent="." index="1"]
transform = Transform( 0.0828231, -0.427405, 0, 1.56881, 0.0225638, 0, 0, 0, 1, -0.422999, 4.393, 0.695 )
modulate = Color( 0.2, 0.133333, 0.388235, 1 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="2" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.19593, 0, 0 )

[node name="Doll3D2" parent="." index="3" instance=ExtResource( 2 )]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 1.16065, 0, 0 )

[node name="Doll3D3" parent="." index="4" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.19593, 0, -0.251944 )
isOnlyPenis = true

[node name="MyBoneAttachment" type="Position3D" parent="Doll3D3" index="5"]
script = ExtResource( 5 )
skeleton = NodePath("../DollSkeleton/Doll3D/Skeleton")
boneId = "Penis"

[node name="Fleshlight" parent="Doll3D3/MyBoneAttachment" index="0" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.171, 3.8, -0.362 )

[node name="AnimationTree" type="AnimationTree" parent="." index="5"]
tree_root = SubResource( 529 )
anim_player = NodePath("../Doll3D/DollSkeleton/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 451 )

[node name="AnimationTree2" type="AnimationTree" parent="." index="6"]
tree_root = SubResource( 530 )
anim_player = NodePath("../Doll3D2/DollSkeleton/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 455 )

[node name="AnimationTree3" type="AnimationTree" parent="." index="7"]
tree_root = SubResource( 531 )
anim_player = NodePath("../Doll3D2/DollSkeleton/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 482 )
